force-app/main/default/objects/Office_Distribution_Setting__mdt/Office_Distribution_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Office Distribution Setting</label>
    <pluralLabel>Office Distribution Settings</pluralLabel>
</CustomObject>