force-app/main/default/objects/Office_Distribution_Setting__mdt/fields/Daily_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Daily_Allotment__c</fullName>
    <label>Daily Allotment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Max leads to assign to this office per distribution run.</inlineHelpText>
</CustomField>