force-app/main/default/objects/Office_Distribution_Setting__mdt/fields/Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Code__c</fullName>
    <label>Office Code</label>
    <length>40</length>
    <type>Text</type>
    <inlineHelpText>e.g. HFS_TPA — matches Lead.Office__c value.</inlineHelpText>
</CustomField>