force-app/main/default/objects/Office_Distribution_Setting__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Distribution order (1 = filled first).</inlineHelpText>
</CustomField>