force-app/main/default/objects/Office_Distribution_Setting__mdt/fields/Queue_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Queue_DeveloperName__c</fullName>
    <label>Queue Developer Name</label>
    <length>80</length>
    <type>Text</type>
    <inlineHelpText>DeveloperName of the office Lead queue to assign to (e.g. Tampa_Leads).</inlineHelpText>
</CustomField>