force-app/main/default/objects/Office_Distribution_Setting__mdt/fields/Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Id__c</fullName>
    <label>Slack Channel Id</label>
    <length>40</length>
    <type>Text</type>
    <inlineHelpText>Slack channel ID (e.g. C0BMF3307AM) the pipeline feed posts to for this office. Blank = no Slack post for this office.</inlineHelpText>
</CustomField>